--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dư án 3</title>
 </head>
+
 <body>
     <h1>Dự án 3</h1>
     <h2>Sửa đổi lần 1</h2>
     <h2>Sửa đổi lần 2</h2>
+    <h2>Sửa đổi lần 3</h2>
 </body>
+
 </html>
